--- a/Softwarehouse/Business/Business.csproj
+++ b/Softwarehouse/Business/Business.csproj
@@ -50,14 +50,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interface\IRepository.cs" />
-    <Compile Include="Interface\IService.cs" />
+    <Compile Include="Interfaces\IRepository.cs" />
+    <Compile Include="Interfaces\IService.cs" />
     <Compile Include="Models\SoftwarehouseDB\SoftwarehouseDBModel.cs" />
     <Compile Include="Models\SoftwarehouseDB\SoftwarehouseDBSPModel.cs" />
     <Compile Include="Models\SoftwarehouseDB\Member.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\MemberRepository.cs" />
-    <Compile Include="Service\TestService.cs" />
+    <Compile Include="Repositories\MemberRepository.cs" />
+    <Compile Include="Services\TestService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -70,8 +70,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Repository\說明.txt" />
-    <Content Include="Service\說明.txt" />
+    <Content Include="Repositories\說明.txt" />
+    <Content Include="Services\說明.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
