--- a/Softwarehouse/ObjectCollection/ObjectCollection.csproj
+++ b/Softwarehouse/ObjectCollection/ObjectCollection.csproj
@@ -42,9 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepositoryCondition\ManagerInfoRepoCondition.cs" />
-    <Compile Include="ServiceCondition\TestServiceCondition.cs" />
-    <Compile Include="ServiceResult\TestServiceResult.cs" />
+    <Compile Include="RepositoryConditions\ManagerInfoRepoCondition.cs" />
+    <Compile Include="ServiceConditions\TestServiceCondition.cs" />
+    <Compile Include="ServiceResults\TestServiceResult.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
