匯入資料庫檔案

--- a/Softwarehouse/Business/App.config
+++ b/Softwarehouse/Business/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="SoftwarehouseDB" providerName="System.Data.SqlClient" connectionString="Data Source=WILLIANHSIAO-PC;Initial Catalog=Softwarehouse;
-        Persist Security Info=True;User ID=sa;Password=15296410"/>
+        Persist Security Info=True;User ID=sa;Password=sa"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
