1. 加入VIP網站、後台網站專案 2. 會員註冊與登出登入資料表設計 3. Model加入

--- a/Softwarehouse/ObjectCollection/ObjectCollection.csproj
+++ b/Softwarehouse/ObjectCollection/ObjectCollection.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepositoryConditions\ManagerInfoRepoCondition.cs" />
+    <Compile Include="RepositoryConditions\MemberDataRepoCondition.cs" />
     <Compile Include="ServiceConditions\TestServiceCondition.cs" />
     <Compile Include="ServiceResults\TestServiceResult.cs" />
   </ItemGroup>
