--- a/Softwarehouse/Business/Business.csproj
+++ b/Softwarehouse/Business/Business.csproj
@@ -52,11 +52,14 @@
   <ItemGroup>
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IService.cs" />
+    <Compile Include="Models\SoftwarehouseDB\AdminData.cs" />
     <Compile Include="Models\SoftwarehouseDB\SoftwarehouseDBModel.cs" />
     <Compile Include="Models\SoftwarehouseDB\SoftwarehouseDBSPModel.cs" />
-    <Compile Include="Models\SoftwarehouseDB\Member.cs" />
+    <Compile Include="Models\SoftwarehouseDB\MemberData.cs" />
+    <Compile Include="Models\SoftwarehouseDB\UserAccount.cs" />
+    <Compile Include="Models\SoftwarehouseDB\VipData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\MemberRepository.cs" />
+    <Compile Include="Repositories\MemberDataRepository.cs" />
     <Compile Include="Services\TestService.cs" />
   </ItemGroup>
   <ItemGroup>
