--- a/Softwarehouse/ObjectCollection/ObjectCollection.csproj
+++ b/Softwarehouse/ObjectCollection/ObjectCollection.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryConditions\AdminUserRepoCondition.cs" />
     <Compile Include="RepositoryConditions\MemberDataRepoCondition.cs" />
     <Compile Include="ServiceConditions\TestServiceCondition.cs" />
     <Compile Include="ServiceResults\TestServiceResult.cs" />
