--- a/Softwarehouse/ObjectCollection/ObjectCollection.csproj
+++ b/Softwarehouse/ObjectCollection/ObjectCollection.csproj
@@ -42,8 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepositoryConditions\AdminUserRepoCondition.cs" />
-    <Compile Include="RepositoryConditions\MemberDataRepoCondition.cs" />
+    <Compile Include="RepositoryConditions\AdminUsersRepoCondition.cs" />
+    <Compile Include="RepositoryConditions\MembersRepoCondition.cs" />
+    <Compile Include="RepositoryConditions\VipUsersRepoCondition.cs" />
     <Compile Include="ServiceConditions\TestServiceCondition.cs" />
     <Compile Include="ServiceResults\TestServiceResult.cs" />
   </ItemGroup>
