--- a/Softwarehouse/Softwarehouse/Web.config
+++ b/Softwarehouse/Softwarehouse/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="SoftwarehouseDB" connectionString="Data Source=.\sqlexpress;Initial Catalog=SoftwarehouseDB;Persist Security Info=True;User ID=sa;Password=abc123456;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
