--- a/Softwarehouse/ObjectCollection/ObjectCollection.csproj
+++ b/Softwarehouse/ObjectCollection/ObjectCollection.csproj
@@ -41,11 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IServiceResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryConditions\AdminUsersRepoCondition.cs" />
     <Compile Include="RepositoryConditions\MembersRepoCondition.cs" />
     <Compile Include="RepositoryConditions\VipUsersRepoCondition.cs" />
+    <Compile Include="ServiceConditions\CreateMemberServiceCondition.cs" />
     <Compile Include="ServiceConditions\TestServiceCondition.cs" />
+    <Compile Include="ServiceResults\CreateMemberServiceResult.cs" />
     <Compile Include="ServiceResults\TestServiceResult.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
