--- a/Softwarehouse/Security/Security.csproj
+++ b/Softwarehouse/Security/Security.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,11 +43,13 @@
   <ItemGroup>
     <Compile Include="BinaryUtil.cs" />
     <Compile Include="ByteArrayExtensions.cs" />
+    <Compile Include="Encrypt.cs" />
     <Compile Include="Enums\HashAlgorithmKind.cs" />
     <Compile Include="Enums\HashStringKind.cs" />
     <Compile Include="HashProvider.cs" />
     <Compile Include="IHashProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomSalt.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
