--- a/Softwarehouse/Softwarehouse/Web.config
+++ b/Softwarehouse/Softwarehouse/Web.config
@@ -11,6 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
+    <!--add name="SoftwarehouseDB" connectionString="Data Source=softwarehouse.database.windows.net;Initial Catalog=SoftwarehouseDB;Persist Security Info=True;User ID=softwarehouse;Password=Willian15296410;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" /-->
     <add name="SoftwarehouseDB" connectionString="Data Source=.\sqlexpress;Initial Catalog=SoftwarehouseDB;Persist Security Info=True;User ID=sa;Password=abc123456;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
@@ -48,5 +49,10 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
-  </system.webServer>
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
 </configuration>
