會員註冊與登出登入

--- a/Softwarehouse/Business/Business.csproj
+++ b/Softwarehouse/Business/Business.csproj
@@ -63,7 +63,7 @@
     <Compile Include="Repositories\VipUsersRepository.cs" />
     <Compile Include="Services\MemberAccountRepeatService.cs" />
     <Compile Include="Services\CreateMemberService.cs" />
-    <Compile Include="Services\TestService.cs" />
+    <Compile Include="Services\MemberLoginService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
