--- a/Softwarehouse/Common/Common.csproj
+++ b/Softwarehouse/Common/Common.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8B8CCBDB-299F-4532-9528-90505C73EF33}</ProjectGuid>
+    <ProjectGuid>{D5564DB3-29B9-4642-9D66-59253A368B25}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ObjectCollection</RootNamespace>
-    <AssemblyName>ObjectCollection</AssemblyName>
+    <RootNamespace>Common</RootNamespace>
+    <AssemblyName>Common</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -33,6 +33,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Mvc, Version=4.0.0.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,22 +43,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interfaces\IServiceResult.cs" />
+    <Compile Include="Attributes\FrontEndAuthAttribute.cs" />
+    <Compile Include="Classes\AjaxResult.cs" />
+    <Compile Include="Classes\FrontEndMemberData.cs" />
+    <Compile Include="Helpers\FrontEndMemberHelper.cs" />
+    <Compile Include="Helpers\SiteHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepositoryConditions\AdminUsersRepoCondition.cs" />
-    <Compile Include="RepositoryConditions\MembersRepoCondition.cs" />
-    <Compile Include="RepositoryConditions\VipUsersRepoCondition.cs" />
-    <Compile Include="ServiceConditions\CreateMemberServiceCondition.cs" />
-    <Compile Include="ServiceConditions\MemberLoginServiceCondition.cs" />
-    <Compile Include="ServiceResults\CreateMemberServiceResult.cs" />
-    <Compile Include="ServiceResults\MemberLoginServiceResult.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Business\Business.csproj">
+      <Project>{0A8F5A39-4359-429F-8D09-205DD4631270}</Project>
+      <Name>Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ObjectCollection\ObjectCollection.csproj">
+      <Project>{8B8CCBDB-299F-4532-9528-90505C73EF33}</Project>
+      <Name>ObjectCollection</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
