--- a/Softwarehouse/Common/Common.csproj
+++ b/Softwarehouse/Common/Common.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Classes\FrontEndMemberData.cs" />
     <Compile Include="Enums\LoginResultEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringDefine\StringDefine.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
