1. bootstrap upgrade to 4 2. use tooltipster 3. change theme 4. add top nav bar

--- a/Softwarehouse/Softwarehouse/Web.config
+++ b/Softwarehouse/Softwarehouse/Web.config
@@ -19,6 +19,10 @@
     <!--add name="SoftwarehouseDB" connectionString="Data Source=.\sqlexpress;Initial Catalog=SoftwarehouseDB;Persist Security Info=True;User ID=sa;Password=abc123456;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" /-->
   </connectionStrings>
   <system.web>
+    <customErrors mode="Off"></customErrors>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Login/Index" timeout="600" name=".SOFTWAREHOUSEFRONTAUTH" />
+    </authentication>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
