--- a/Softwarehouse/Softwarehouse/packages.config
+++ b/Softwarehouse/Softwarehouse/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngularJS.Core" version="1.6.2" targetFramework="net452" />
-  <package id="bootstrap" version="3.3.7" targetFramework="net452" />
-  <package id="bootstrap-dialog" version="3.3.4.1" targetFramework="net452" />
+  <package id="bootstrap" version="4.0.0" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
-  <package id="jQuery" version="1.10.2" targetFramework="net452" />
+  <package id="jQuery" version="3.1.1" targetFramework="net452" />
+  <package id="jQuery.Tooltipster" version="3.3.0" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net452" />
@@ -26,6 +26,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="popper.js" version="1.12.9" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="Unity.Mvc" version="4.0.1" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
