--- a/Softwarehouse/Business/Business.csproj
+++ b/Softwarehouse/Business/Business.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IService.cs" />
     <Compile Include="Models\SoftwarehouseDB\AdminUsers.cs" />
+    <Compile Include="Models\SoftwarehouseDB\MemberResetPassword.cs" />
     <Compile Include="Models\SoftwarehouseDB\SoftwarehouseDBModel.cs" />
     <Compile Include="Models\SoftwarehouseDB\SoftwarehouseDBSPModel.cs" />
     <Compile Include="Models\SoftwarehouseDB\Members.cs" />
@@ -61,11 +62,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AdminUsersRepository.cs" />
     <Compile Include="Repositories\MembersRepository.cs" />
+    <Compile Include="Repositories\MemberResetPasswordRepository.cs" />
     <Compile Include="Repositories\VipUsersRepository.cs" />
     <Compile Include="Services\MemberAccountRepeatService.cs" />
-    <Compile Include="Services\CreateMemberService.cs" />
+    <Compile Include="Services\MemberCreateService.cs" />
     <Compile Include="Services\MemberEmailRepeatService.cs" />
     <Compile Include="Services\MemberLoginService.cs" />
+    <Compile Include="Services\MemberResetPasswordService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
