--- a/Softwarehouse/Softwarehouse/Softwarehouse.csproj
+++ b/Softwarehouse/Softwarehouse/Softwarehouse.csproj
@@ -400,6 +400,7 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\ForgotPassword\Index.cshtml" />
     <None Include="Views\Register\PrivacyPolicy.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -412,7 +413,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Account\" />
-    <Folder Include="Views\ForgotPassword\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Business\Business.csproj">
