1.忘記密碼寄送重設密碼信件 2.重設密碼功能

--- a/Softwarehouse/Business/Business.csproj
+++ b/Softwarehouse/Business/Business.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Repositories\MemberResetPasswordRepository.cs" />
     <Compile Include="Repositories\VipUsersRepository.cs" />
     <Compile Include="Services\MemberAccountRepeatService.cs" />
+    <Compile Include="Services\MemberCheckResetPasswordUrlService.cs" />
     <Compile Include="Services\MemberCreateService.cs" />
     <Compile Include="Services\MemberEmailRepeatService.cs" />
     <Compile Include="Services\MemberLoginService.cs" />
